--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "nordcomputer/showoutofstockprice": "0.4.2",
         "olegkoval/magento2-regenerate-url-rewrites": "^1.3",
         "sparsh/buy-now-magento-2-extension": "1.0.1",
+        "sparsh/magento-2-facebook-pixel-extension": "1.0.1",
         "stripe/stripe-payments": "2.5.9"
     },
     "require-dev": {
