--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "ext-json": "*",
         "magento/product-community-edition": "2.4.2",
+        "magepow/stickycart": "^1.0",
         "nordcomputer/showoutofstockprice": "0.4.2",
         "olegkoval/magento2-regenerate-url-rewrites": "^1.3",
         "sparsh/buy-now-magento-2-extension": "1.0.1",
