--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     },
     "require": {
         "ext-json": "*",
+        "cjpublicis/universal-tag-module": "1.0.3",
         "magento/product-community-edition": "2.4.2",
         "magepow/stickycart": "^1.0",
         "nordcomputer/showoutofstockprice": "0.4.2",
