--- a/app/code/MageWorx/SearchSuiteAutocomplete/composer.json
+++ b/app/code/MageWorx/SearchSuiteAutocomplete/composer.json
@@ -1,23 +1,28 @@
 {
-   "name": "mageworx/module-searchsuiteautocomplete",
-   "description": "Search Suite Autocomplete by MageWorx",
-   "require": {
-       "magento/framework"      : ">=100.0.0 <101",
-       "magento/module-catalog" : ">=100.0.0 <102",
-       "magento/module-search"  : ">=100.0.0 <101"
-   },
-   "type": "magento2-module",
-   "version": "2.1.1",
-   "license": [
-       "OSL-3.0",
-       "AFL-3.0"
-   ],
-   "autoload": {
-       "files": [
-           "registration.php"
-       ],
-       "psr-4": {
-           "MageWorx\\SearchSuiteAutocomplete\\": ""
-       }
-   }
+    "name": "mageworx/module-searchsuiteautocomplete",
+    "description": "Search Suite Autocomplete extension by MageWorx for Magento 2",
+    "require": {
+        "magento/framework": ">=100.0.0 <104",
+        "magento/module-catalog": ">=100.0.0 <105",
+        "magento/module-search": ">=100.0.0 <102"
+    },
+    "type": "magento2-module",
+    "version": "2.1.13",
+    "license": "GPL-3.0",
+    "authors": [
+        {
+            "name": "MageWorx",
+            "email": "support@mageworx.com",
+            "homepage": "https://www.mageworx.com",
+            "role": "Technical Support"
+        }
+    ],
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "MageWorx\\SearchSuiteAutocomplete\\": ""
+        }
+    }
 }
