--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ atlassian*
 /pub/errors/*
 /pub/media/codazon_cache/*
 /pub/media/codazon/slideshow/*
+/pub/media/codazon/themeoptions/background/*
 /pub/media/.thumbs/*
 /pub/media/.thumbscodazon/*
 /pub/media/.thumbsmagefan_blog/*
@@ -87,3 +88,5 @@ atlassian*
 /pub/media/sebwite/*
 /pub/media/Ecopure_Gift_IMPORTDATA/*
 /pub/media/smile_productlabel/*
+/pub/media/email/*
+/pub/media/video/*
