后台订阅增加短信发送禁用选项

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,12 @@
     ],
     "config": {
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "laminas/laminas-dependency-plugin": true,
+            "magento/magento-composer-installer": true,
+            "magento/inventory-composer-installer": true
+        }
     },
     "require": {
         "ext-curl": "*",
@@ -17,6 +22,7 @@
         "laminas/laminas-serializer": "^2.10",
         "magento/product-community-edition": "2.4.3",
         "magepow/stickycart": "^1.0",
+        "metagento/disable-newsletter-success-magento2": "^1.0",
         "nordcomputer/showoutofstockprice": "0.4.2",
         "olegkoval/magento2-regenerate-url-rewrites": "^1.3",
         "reviewscouk/reviews": "^0.0.40",
